[package]
name = "libtraceroute"
version = "0.1.0"
authors = ["Ilya Grishkov <ilyagrishkov@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ilyagrishkov/libtraceroute"
repository = "https://github.com/ilyagrishkov/libtraceroute"
description = "Cross-platform traceroute library for Rust"
readme = "README.md"
keywords = ["traceroute", "networking", "udp", "tcp", "icmp"]
categories = ["network-anlysis"]

[dependencies]
pnet = "0.26.0"
rand = "0.7.3"
async-std = "1.7.0"
