[package]
name = "libtraceroute"
version = "0.1.0"
authors = ["Ilya Grishkov <ilyagrishkov@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ilyagrishkov/libtraceroute"
repository = "https://github.com/ilyagrishkov/libtraceroute"
description = "Cross-platform traceroute library for Rust"
readme = "README.md"
keywords = ["traceroute", "networking", "udp", "tcp", "icmp"]
categories = ["network-anlysis"]

[dependencies]
pnet = "0.27.2"
rand = "0.8.4"
async-std = "1.9.0"
